--- a/app/src/main/res/layout/activity_create_session.xml
+++ b/app/src/main/res/layout/activity_create_session.xml
@@ -109,27 +109,30 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/time_label" />
+
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="50"
-            android:orientation="vertical">
+            android:layout_weight="90">
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/time_label" />
-
-            <EditText
-                android:id="@+id/time_edit_text"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="HH:MM"
-                android:inputType="time" />
+                android:orientation="vertical" >
 
-        </LinearLayout>
+                <ListView
+                    android:id="@+id/session_date_listview"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="90" />
+            </LinearLayout>
+        </ScrollView>
 
         <Button
             android:id="@+id/request_session_button"
