--- a/app/src/main/res/layout/activity_user_profile_edit.xml
+++ b/app/src/main/res/layout/activity_user_profile_edit.xml
@@ -102,6 +102,7 @@
         android:textStyle="bold" />
 
     <FrameLayout
+        android:id="@+id/frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
