--- a/app/src/main/res/layout/tutor_search_item_layout.xml
+++ b/app/src/main/res/layout/tutor_search_item_layout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -26,7 +25,7 @@
             android:id="@+id/subject_list_id"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
             android:layout_weight="3"
             android:text="@string/matched_subjects_txt" />
@@ -35,7 +34,7 @@
             android:id="@+id/subject_list_id_val"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:layout_weight="3"
             android:text="" />
